# SNARK-MPC-setup

./: Cargo.toml  README.md
src/: challenge  main.rs  output.txt  response
